force-app/main/default/objects/Allocation_Partner__c/Allocation_Partner__c.object-meta.xml
<CustomObject>
    <description>Partner allocations from Allocation Engine</description>
    <label>Allocation Partner</label>
    <nameField>
        <label>Allocation Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>