force-app/main/default/objects/Allocation_Partner__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Allocation Partners</relationshipLabel>
    <relationshipName>Allocation_Partners</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>