force-app/main/default/objects/Allocation_Partner__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to assign this application to the selected investor(s)</description>
    <label>Assign To</label>
    <type>Checkbox</type>
</CustomField>