force-app/main/default/objects/Allocation_Partner__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Allocation Partners</relationshipLabel>
    <relationshipName>Allocation_Partners</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>