force-app/main/default/objects/Allocation_Partner__c/fields/Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The preferred partner from the allocation engine result</description>
    <label>Lead Partner</label>
    <type>Checkbox</type>
</CustomField>